# WURP_Toxic-Motion-Engine_JUCE

./: README.md
WURP/: CMakeLists.txt  LICENSE  README.md
WURP/assets/icons/: README.md
WURP/assets/ui/: README.md
WURP/cmake/: README.md
WURP/docs/: feature_matrix.md  release_checklist.md
WURP/include/wurp/: AnimationLayer.h  GasGenerator.h  MotionEngine.h  PluginEditor.h  PluginProcessor.h  SaturationStage.h  ThemeLoader.h
WURP/presets/factory/bass/: sewer_sub_01.json  toxic_bass_01.json
WURP/presets/factory/fx/: gas_burst_01.json
WURP/scripts/: package_zip.py  smoke_test.py  theme_validator.py
WURP/src/core/: PluginEditor.cpp  PluginProcessor.cpp
WURP/src/dsp/: SaturationStage.cpp
WURP/src/ui/: SequencerComponent.cpp  ToxicChamberComponent.cpp
WURP/themes/default_toxic/: background_anim.txt  background_static.txt  overlay.txt  theme.json
WURP/themes/reactor_green/: background_anim.txt  background_static.txt  overlay.txt  theme.json
WURP/themes/sewer_slime/: background_anim.txt  background_static.txt  overlay.txt  theme.json
WURP_Toxicron_Edition/: CMakeLists.txt  LICENSE  README.md
WURP_Toxicron_Edition/assets/fonts/: README.md
WURP_Toxicron_Edition/cmake/: README.md
WURP_Toxicron_Edition/docs/: build_notes.md  preset_format.md  product_spec.md  theme_pack_spec.md  theme_system_notes.md  toxicron_exclusive_spec.md
WURP_Toxicron_Edition/include/wurp/: FormantFilter.h  MacroStripComponent.h  SequencerComponent.h  StereoDrift.h  ToxicChamberComponent.h
WURP_Toxicron_Edition/tests/: README.md
(+18 files in other folders)
